@@ -13,6 +13,7 @@ Jump Start Changelog
 * Fixed: With ThemeForest update system, disabling backups didn't work.
 * Fixed: When logged in, frontend lightbox will now display over admin bar.
 * Fixed: Sanitize out quotation marks when saving Google font name in typography Theme Options.
+* Fixed: Simple slider captions sitting on top of linked image slides.
 
 --------------------------------------------------------------
 
